# runai-interactive-context

./: LICENSE.txt  README.md  pyproject.toml
src/runai_interactive_context/: __about__.py  __init__.py  cli.py
tests/: test_jupyter_parser.py  test_kubectl_parser.py
